syntax = "proto3";

package greetpb;
option go_package = "greetpb";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message LongGreetRequest {
  Greeting greeting = 1;
}

message LongGreetResponse {
  string result = 1;
}

service GreetService {
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){};
}